--- a/copyxnat.xnat_backend.html
+++ b/copyxnat.xnat_backend.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.xnat_backend.pyxnat_server module" href="copyxnat.xnat_backend.pyxnat_server.html" />
-    <link rel="prev" title="copyxnat.xnat.xnat_interface module" href="copyxnat.xnat.xnat_interface.html" /> 
+    <link rel="prev" title="copyxnat.xnat.xnat_xml module" href="copyxnat.xnat.xnat_xml.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.xnat_backend.pyxnat_server.html" title="copyxnat.xnat_backend.pyxnat_server module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.xnat_interface.html" title="copyxnat.xnat.xnat_interface module"
+          <a href="copyxnat.xnat.xnat_xml.html" title="copyxnat.xnat.xnat_xml module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -83,8 +83,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.xnat.xnat_interface.html"
-                        title="previous chapter">copyxnat.xnat.xnat_interface module</a></p>
+  <p class="topless"><a href="copyxnat.xnat.xnat_xml.html"
+                        title="previous chapter">copyxnat.xnat.xnat_xml module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.xnat_backend.pyxnat_server.html"
                         title="next chapter">copyxnat.xnat_backend.pyxnat_server module</a></p>
@@ -122,7 +122,7 @@
           <a href="copyxnat.xnat_backend.pyxnat_server.html" title="copyxnat.xnat_backend.pyxnat_server module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.xnat_interface.html" title="copyxnat.xnat.xnat_interface module"
+          <a href="copyxnat.xnat.xnat_xml.html" title="copyxnat.xnat.xnat_xml module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
