--- a/_modules/index.html
+++ b/_modules/index.html
@@ -61,6 +61,7 @@
 <li><a href="copyxnat/xnat/copy_cache.html">copyxnat.xnat.copy_cache</a></li>
 <li><a href="copyxnat/xnat/xml_cleaner.html">copyxnat.xnat.xml_cleaner</a></li>
 <li><a href="copyxnat/xnat/xnat_interface.html">copyxnat.xnat.xnat_interface</a></li>
+<li><a href="copyxnat/xnat/xnat_xml.html">copyxnat.xnat.xnat_xml</a></li>
 <li><a href="copyxnat/xnat_backend/pyxnat_server.html">copyxnat.xnat_backend.pyxnat_server</a></li>
 <li><a href="copyxnat/xnat_backend/server_factory.html">copyxnat.xnat_backend.server_factory</a></li>
 <li><a href="versioneer.html">versioneer</a></li>
